[gd_scene load_steps=28 format=3 uid="uid://by5tjfh0v85x0"]

[ext_resource type="Script" uid="uid://c0w8rv4u48e6y" path="res://script/game.gd" id="1_ixvnl"]
[ext_resource type="Script" uid="uid://bml4f11ttyeu0" path="res://script/base_ball.gd" id="2_p1ry8"]
[ext_resource type="Texture2D" uid="uid://dbnlx3to4x3da" path="res://assets/texture/ball_texture.png" id="3_xwcet"]
[ext_resource type="Texture2D" uid="uid://t0skmtwsjrlr" path="res://assets/texture/tips.png" id="4_ll5lq"]
[ext_resource type="AudioStream" uid="uid://c8q74wdtsfjgk" path="res://assets/audio/pop.mp3" id="4_xlg7c"]
[ext_resource type="AudioStream" uid="uid://b3j0if22mqsw8" path="res://assets/audio/game_2.mp3" id="4_ym5sv"]
[ext_resource type="Script" uid="uid://ymvp411wk2qy" path="res://script/camera_2d.gd" id="5_xlg7c"]
[ext_resource type="Theme" uid="uid://cjlmk6m8bqip5" path="res://assets/game_theme.tres" id="7_qpk70"]
[ext_resource type="AudioStream" uid="uid://dh24n8phn1w7d" path="res://assets/audio/game.mp3" id="8_ll5lq"]
[ext_resource type="AudioStream" uid="uid://cu1inthb7aiyd" path="res://assets/audio/pop2.mp3" id="9_17rxn"]
[ext_resource type="AudioStream" uid="uid://cjsh44l5r05em" path="res://assets/audio/Minimalist11.wav" id="10_yq8tf"]

[sub_resource type="CircleShape2D" id="CircleShape2D_xlg7c"]
radius = 16.0312

[sub_resource type="AtlasTexture" id="AtlasTexture_17rxn"]
atlas = ExtResource("3_xwcet")
region = Rect2(29, 11, 66, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_ym5sv"]
atlas = ExtResource("3_xwcet")
region = Rect2(29, 11, 66, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1ry8"]
atlas = ExtResource("3_xwcet")
region = Rect2(29, 11, 66, 66)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_xwcet"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ll5lq"]
atlas = ExtResource("3_xwcet")
region = Rect2(118, 12, 66, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_qpk70"]
atlas = ExtResource("3_xwcet")
region = Rect2(118, 12, 66, 65)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_p1ry8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qpk70"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qpk70"]
size = Vector2(771, 90)

[sub_resource type="Animation" id="Animation_ll5lq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GameOverFade:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GameOverFade:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DefaultFade:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("DefaultFade:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("NullAreaFade:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("NullAreaFade:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("LogoFade:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_17rxn"]
resource_name = "next_level"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DefaultFade:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DefaultFade:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5, 2.93333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_qpk70"]
resource_name = "game_over"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GameOverFade:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GameOverFade:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0333333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_yq8tf"]
resource_name = "start"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LogoFade:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LogoFade:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ym5sv"]
resource_name = "null_area"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NullAreaFade:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.75, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("NullAreaFade:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.03, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_17rxn"]
_data = {
&"RESET": SubResource("Animation_ll5lq"),
&"default": SubResource("Animation_17rxn"),
&"game_over": SubResource("Animation_qpk70"),
&"logo_fade_out": SubResource("Animation_yq8tf"),
&"null_area": SubResource("Animation_ym5sv")
}

[node name="Game" type="Node2D"]
script = ExtResource("1_ixvnl")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(640, 0)
offset = Vector2(0, 360)
script = ExtResource("5_xlg7c")

[node name="GameBGAudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_ll5lq")
parameters/looping = false

[node name="HardModeAudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_ym5sv")

[node name="Tips" type="Node2D" parent="."]
modulate = Color(1, 1, 1, 0.741176)
position = Vector2(440, 260)

[node name="TextureRect" type="TextureRect" parent="Tips"]
offset_left = -70.0
offset_top = -138.0
offset_right = 345.0
offset_bottom = 183.0
scale = Vector2(0.5, 0.5)
mouse_filter = 2
texture = ExtResource("4_ll5lq")

[node name="Label" type="Label" parent="Tips"]
offset_left = -70.0
offset_top = 219.0
offset_right = 560.0
offset_bottom = 259.0
theme = ExtResource("7_qpk70")
theme_type_variation = &"MyLabel"
theme_override_font_sizes/font_size = 30
text = "As you can see, it's a simple game~"

[node name="BackGround" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="BackGround"]
motion_mirroring = Vector2(1280, 0)

[node name="Background" type="ColorRect" parent="BackGround/ParallaxLayer"]
offset_right = 1280.0
offset_bottom = 360.0

[node name="Background2" type="ColorRect" parent="BackGround/ParallaxLayer"]
offset_top = 360.0
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0, 0, 0, 1)

[node name="UpperWorld" type="Node2D" parent="."]
position = Vector2(0, 360)

[node name="BlackBall" type="CharacterBody2D" parent="UpperWorld" node_paths=PackedStringArray("game", "other_ball") groups=["ball"]]
position = Vector2(217, -222)
collision_layer = 32
collision_mask = 22
script = ExtResource("2_p1ry8")
ball_name = 1
game = NodePath("../..")
other_ball = NodePath("../../LowerWorld/WhiteBall")

[node name="CollisionShape2D" type="CollisionShape2D" parent="UpperWorld/BlackBall"]
shape = SubResource("CircleShape2D_xlg7c")
debug_color = Color(0.823529, 0.172549, 0.207843, 0.835294)

[node name="TrailParticles" type="CPUParticles2D" parent="UpperWorld/BlackBall"]
amount = 30
texture = SubResource("AtlasTexture_17rxn")
emission_shape = 1
emission_sphere_radius = 5.0
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 10.0
initial_velocity_max = 20.0
scale_amount_min = 0.05
scale_amount_max = 0.1
color = Color(0, 0, 0, 1)

[node name="DeathParticles" type="CPUParticles2D" parent="UpperWorld/BlackBall"]
emitting = false
amount = 50
texture = SubResource("AtlasTexture_ym5sv")
lifetime = 6.0
one_shot = true
explosiveness = 1.0
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 50.0
initial_velocity_max = 100.0
scale_amount_min = 0.1
scale_amount_max = 0.2

[node name="Sprite2D" type="Sprite2D" parent="UpperWorld/BlackBall"]
scale = Vector2(0.5, 0.5)
texture = SubResource("AtlasTexture_p1ry8")

[node name="4" type="Label" parent="UpperWorld/BlackBall/Sprite2D"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -59.5
offset_right = -21.0
offset_bottom = -6.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("7_qpk70")
theme_type_variation = &"MyLabel"
theme_override_font_sizes/font_size = 40
text = "4"

[node name="Pop" type="AudioStreamPlayer" parent="UpperWorld/BlackBall"]
stream = ExtResource("4_xlg7c")

[node name="Pop2" type="AudioStreamPlayer" parent="UpperWorld/BlackBall"]
stream = ExtResource("9_17rxn")
volume_db = -15.0

[node name="Floor" type="StaticBody2D" parent="UpperWorld"]
position = Vector2(0, -5)
collision_layer = 4
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="UpperWorld/Floor"]
shape = SubResource("WorldBoundaryShape2D_xwcet")

[node name="UpWall" type="StaticBody2D" parent="UpperWorld" groups=["wall"]]
position = Vector2(281, -360)
rotation = 3.14159
collision_layer = 2
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="UpperWorld/UpWall"]
shape = SubResource("WorldBoundaryShape2D_xwcet")

[node name="LowerWorld" type="Node2D" parent="."]
position = Vector2(0, 360)

[node name="WhiteBall" type="CharacterBody2D" parent="LowerWorld" node_paths=PackedStringArray("game", "other_ball") groups=["ball"]]
position = Vector2(217, 222)
collision_layer = 32
collision_mask = 26
up_direction = Vector2(0, 1)
script = ExtResource("2_p1ry8")
game = NodePath("../..")
other_ball = NodePath("../../UpperWorld/BlackBall")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LowerWorld/WhiteBall"]
shape = SubResource("CircleShape2D_xlg7c")

[node name="TrailParticles" type="CPUParticles2D" parent="LowerWorld/WhiteBall"]
amount = 30
texture = SubResource("AtlasTexture_ll5lq")
emission_shape = 1
emission_sphere_radius = 5.0
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 10.0
initial_velocity_max = 20.0
scale_amount_min = 0.05
scale_amount_max = 0.1

[node name="DeathParticles" type="CPUParticles2D" parent="LowerWorld/WhiteBall"]
emitting = false
amount = 50
texture = SubResource("AtlasTexture_ll5lq")
lifetime = 6.0
explosiveness = 1.0
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_max = 100.0
scale_amount_min = 0.1
scale_amount_max = 0.2

[node name="Sprite2D" type="Sprite2D" parent="LowerWorld/WhiteBall"]
scale = Vector2(0.5, 0.5)
texture = SubResource("AtlasTexture_qpk70")

[node name="3" type="Label" parent="LowerWorld/WhiteBall/Sprite2D"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -59.0
offset_right = -21.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("7_qpk70")
theme_type_variation = &"MyLabel"
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "3"

[node name="Pop" type="AudioStreamPlayer" parent="LowerWorld/WhiteBall"]
stream = ExtResource("4_xlg7c")

[node name="Pop2" type="AudioStreamPlayer" parent="LowerWorld/WhiteBall"]
stream = ExtResource("9_17rxn")
volume_db = -15.0

[node name="Floor" type="StaticBody2D" parent="LowerWorld"]
position = Vector2(0, 5)
collision_layer = 8
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="LowerWorld/Floor"]
rotation = 3.14159
shape = SubResource("WorldBoundaryShape2D_p1ry8")
debug_color = Color(1, 1, 1, 0.42)

[node name="UpWalls" type="StaticBody2D" parent="LowerWorld" groups=["wall"]]
position = Vector2(0, 360)
rotation = 3.14159
collision_layer = 2
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="LowerWorld/UpWalls"]
rotation = 3.14159
shape = SubResource("WorldBoundaryShape2D_p1ry8")
debug_color = Color(1, 1, 1, 0.42)

[node name="BornArea" type="Area2D" parent="." groups=["born"]]
position = Vector2(660, 122)
collision_layer = 2
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="BornArea"]
shape = SubResource("CircleShape2D_qpk70")
debug_color = Color(4.33177e-07, 0.63294, 0.445992, 0.42)

[node name="LeftArea" type="Area2D" parent="."]
position = Vector2(-360, 360)
collision_layer = 2
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftArea"]
position = Vector2(-235, 0)
rotation = 1.5708
shape = SubResource("RectangleShape2D_qpk70")

[node name="UI" type="CanvasLayer" parent="."]

[node name="LogoFade" type="ColorRect" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Label" type="Label" parent="UI/LogoFade"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -79.5
offset_right = 180.0
offset_bottom = 79.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("7_qpk70")
theme_type_variation = &"MyLabel"
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 180
text = "xusir"

[node name="GameOverFade" type="ColorRect" parent="UI"]
visible = false
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0, 0, 0, 1)

[node name="GameOver" type="Label" parent="UI/GameOverFade"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -540.0
offset_top = -119.0
offset_right = 540.0
offset_bottom = 119.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("7_qpk70")
theme_type_variation = &"MyButton"
theme_override_font_sizes/font_size = 120
text = "Game Over!"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="UI/GameOverFade"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -63.0
offset_top = -168.0
offset_right = 77.0
offset_bottom = -128.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("7_qpk70")
theme_type_variation = &"MyButton"
theme_override_font_sizes/font_size = 30
text = "Restart"
alignment = 0

[node name="RestartButtonAudioPlayer" type="AudioStreamPlayer" parent="UI/GameOverFade/RestartButton"]
stream = ExtResource("10_yq8tf")

[node name="ExitButton" type="Button" parent="UI/GameOverFade"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -63.0
offset_top = -104.0
offset_right = 20.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("7_qpk70")
theme_type_variation = &"MyButton"
theme_override_font_sizes/font_size = 30
text = "Exit"
alignment = 0

[node name="ExitButtonAudioPlayer" type="AudioStreamPlayer" parent="UI/GameOverFade/ExitButton"]
stream = ExtResource("10_yq8tf")

[node name="DefaultFade" type="ColorRect" parent="UI"]
visible = false
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Label" type="Label" parent="UI/DefaultFade"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("7_qpk70")
theme_type_variation = &"MyLabel"
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 120
text = "Good Luck!"

[node name="NullAreaFade" type="ColorRect" parent="UI"]
visible = false
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Label" type="Label" parent="UI/NullAreaFade"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("7_qpk70")
theme_type_variation = &"MyLabel"
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 80
text = "那边还没做呢"

[node name="FadeAnimationPlayer" type="AnimationPlayer" parent="UI"]
libraries = {
&"": SubResource("AnimationLibrary_17rxn")
}

[node name="GameScore" type="Label" parent="UI"]
offset_right = 162.0
offset_bottom = 40.0
theme = ExtResource("7_qpk70")
theme_type_variation = &"MyLabel"
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Score : 0"

[connection signal="finished" from="GameBGAudioPlayer" to="." method="_on_game_bg_audio_player_finished"]
[connection signal="finished" from="HardModeAudioPlayer" to="." method="_on_hard_mode_audio_player_finished"]
[connection signal="body_entered" from="LeftArea" to="." method="_on_left_area_body_entered"]
[connection signal="pressed" from="UI/GameOverFade/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="UI/GameOverFade/ExitButton" to="." method="_on_exit_button_pressed"]
